<resources>
    <string name="app_name">Pocket Dictionary</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title">Title :</string>
    <string name="OpenSans_Light">OpenSans_Light</string>
    <string name="OpenSans_Reguler">OpenSans_Reguler</string>
    <string name="OpenSans_Semibold">M</string>
    <string name="meaning">Meaning</string>
    <string name="Synonym">Synonym :</string>
    <string name="NA">N/A </string>
    <string name="Translation">Translation in French :</string>
    <string name="antonym">Antonym :</string>
    <string name="favourites">Favourites</string>
    <string name="no_fav">No Favoutrites added</string>





</resources>
