<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="mypocketvakil.example.com.pocketdictionary.Detail">
    <mypocketvakil.example.com.pocketdictionary.custom.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:id="@+id/detail_title"
        app:font="@string/OpenSans_Reguler"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/thirty"
        />

    <mypocketvakil.example.com.pocketdictionary.custom.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meaning"
        android:textSize="20sp"
        android:textColor="#22a697"
        android:paddingLeft="@dimen/sixteen"
        android:paddingRight="@dimen/sixteen"
        android:paddingStart="@dimen/sixteen"
        android:paddingEnd="@dimen/sixteen"
        android:id="@+id/detail_text2"
        android:layout_below="@+id/detail_title"
        app:font="@string/OpenSans_Reguler"
        android:layout_marginRight="@dimen/twentysix"
        android:layout_marginTop="@dimen/fifteen"
        />
    <mypocketvakil.example.com.pocketdictionary.custom.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NA"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:paddingLeft="@dimen/sixteen"
        android:paddingRight="@dimen/sixteen"
        android:paddingStart="@dimen/sixteen"
        android:paddingEnd="@dimen/sixteen"
        android:id="@+id/detail_meaning"
        android:layout_below="@+id/detail_text2"
        app:font="@string/OpenSans_Reguler"
        android:layout_marginRight="@dimen/twentysix"
        android:layout_marginTop="@dimen/five"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:layout_below="@+id/detail_meaning"
        android:background="@android:color/black"
        android:layout_marginTop="@dimen/ten"
        android:id="@+id/view3"
        />
    <mypocketvakil.example.com.pocketdictionary.custom.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Translation"
        android:textSize="20sp"
        android:textColor="#22a697"
        android:paddingLeft="@dimen/sixteen"
        android:paddingRight="@dimen/sixteen"
        android:paddingStart="@dimen/sixteen"
        android:paddingEnd="@dimen/sixteen"
        android:id="@+id/detail_text3"
        android:layout_below="@+id/view2"
        app:font="@string/OpenSans_Reguler"
        android:layout_marginRight="@dimen/twentysix"
        android:layout_marginTop="@dimen/ten"
        />
    <mypocketvakil.example.com.pocketdictionary.custom.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NA"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:paddingLeft="@dimen/sixteen"
        android:paddingRight="@dimen/sixteen"
        android:paddingStart="@dimen/sixteen"
        android:paddingEnd="@dimen/sixteen"
        android:id="@+id/detail_tranlation"
        android:layout_below="@+id/detail_text3"
        app:font="@string/OpenSans_Reguler"
        android:layout_marginRight="@dimen/twentysix"
        android:layout_marginTop="@dimen/five"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:layout_below="@+id/detail_tranlation"
        android:background="@android:color/black"
        android:layout_marginTop="@dimen/ten"
        android:id="@+id/view4"
        />
    <mypocketvakil.example.com.pocketdictionary.custom.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/antonym"
        android:textSize="20sp"
        android:textColor="#22a697"
        android:paddingLeft="@dimen/sixteen"
        android:paddingRight="@dimen/sixteen"
        android:paddingStart="@dimen/sixteen"
        android:paddingEnd="@dimen/sixteen"
        android:id="@+id/detail_text4"
        android:layout_below="@+id/view4"
        app:font="@string/OpenSans_Reguler"
        android:layout_marginRight="@dimen/twentysix"
        android:layout_marginTop="@dimen/ten"
        />
    <mypocketvakil.example.com.pocketdictionary.custom.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NA"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:paddingLeft="@dimen/sixteen"
        android:paddingRight="@dimen/sixteen"
        android:paddingStart="@dimen/sixteen"
        android:paddingEnd="@dimen/sixteen"
        android:id="@+id/detail_antonym"
        android:layout_below="@+id/detail_text4"
        app:font="@string/OpenSans_Reguler"
        android:layout_marginRight="@dimen/twentysix"
        android:layout_marginTop="@dimen/five"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:layout_below="@+id/detail_antonym"
        android:background="@android:color/black"
        android:layout_marginTop="@dimen/ten"
        android:id="@+id/view5"
        />
    <mypocketvakil.example.com.pocketdictionary.custom.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Synonym"
        android:textSize="20sp"
        android:textColor="#22a697"
        android:paddingLeft="@dimen/sixteen"
        android:paddingRight="@dimen/sixteen"
        android:paddingStart="@dimen/sixteen"
        android:paddingEnd="@dimen/sixteen"
        android:id="@+id/detail_text1"
        android:layout_below="@+id/view3"
        app:font="@string/OpenSans_Reguler"
        android:layout_marginRight="@dimen/twentysix"
        android:layout_marginTop="@dimen/ten"
        />
    <mypocketvakil.example.com.pocketdictionary.custom.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NA"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:paddingLeft="@dimen/sixteen"
        android:paddingRight="@dimen/sixteen"
        android:paddingStart="@dimen/sixteen"
        android:paddingEnd="@dimen/sixteen"
        android:id="@+id/detail_synonym"
        android:layout_below="@+id/detail_text1"
        app:font="@string/OpenSans_Reguler"
        android:layout_marginRight="@dimen/twentysix"
        android:layout_marginTop="@dimen/five"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/pointsix"
        android:layout_below="@+id/detail_synonym"
        android:background="@android:color/black"
        android:layout_marginTop="@dimen/ten"
        android:id="@+id/view2"
        />
    <ImageView
        android:layout_width="@dimen/thirty"
        android:layout_height="@dimen/thirty"
        android:id="@+id/detail_favorite"
        android:src="@drawable/heart_green"
        android:layout_alignParentEnd="true"

        android:layout_marginTop="@dimen/ten"
        android:layout_marginRight="@dimen/sixteen"


        />
    <ImageView
        android:layout_width="@dimen/thirty"
        android:layout_height="@dimen/thirty"
        android:id="@+id/detail_favorite_white"
        android:src="@drawable/heart"
        android:layout_alignParentEnd="true"

        android:layout_marginTop="@dimen/ten"
        android:layout_marginRight="@dimen/sixteen"


        />
</RelativeLayout>
